--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+  box-sizing: border-box;
+}
+body{
+  margin: 0;
+  background-color:#FAFAFB;
+  height: 100%;
+}
+
+html{
+  height: 100%;
+
+}
