--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
+$btn-width:100px;
+$btn-height: 32px;
+
 .grid{
   background-color: white;
   width: 402px;
@@ -16,16 +19,7 @@
   padding: 2rem;
 }
 
-button{
-  font-family: 'Noto Sans', sans-serif;
-  width: 101px;
-  height: 31.98px;
-  background: #2F80ED;
-  border-radius: 8px;
-  color: white;
-  border: none;
-  justify-self: center;
-}
+
 
 h1{
   color: #4F4F4F;
@@ -34,7 +28,6 @@ h1{
   display: inline-block;
   height: fit-content;
 }
-
 h6{
   color: #828282;
   font-weight: 500;
@@ -54,4 +47,35 @@ h6{
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+.button{
+  font-family: 'Noto Sans', sans-serif;
+  width: $btn-width;
+  height:$btn-height;
+  background: #2F80ED;
+  border-radius: 8px;
+  color: white;
+  border: none;
+  justify-self: center;
+  overflow: hidden;
+  cursor: pointer;
+  padding-top: 4px;
+  position: relative;
+  z-index: 2;
+
+}
+
+input{
+  cursor: pointer;
+  width: $btn-width;
+  height: $btn-height;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
+
+.button-text{
+  font-size: 0.9rem;
 }
