--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,9 +5,10 @@
 
   </div>
   <h6>Or</h6>
-  <div class="button">
-    <span class="button-text">Chose a file</span>
-    <input type="file" id="file" (change)="onFileInput($event.target)">
+
+  <div class="file-input-wrapper">
+    <button class="btn-file-input">Chose a file</button>
+    <input type="file" name="file"/>
   </div>
 
 </section>
