loading indicator shows on file submissions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <section class="grid">
-  <app-home></app-home>
+  <app-home *ngIf="!fileSubmitted" (fileSubmitted)="onFileSubmit($event)"></app-home>
+  <app-load *ngIf="fileSubmitted"></app-load>
 </section>
 
