--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
 
   <div class="file-input-wrapper">
     <button class="btn-file-input">Chose a file</button>
-    <input type="file" name="file"/>
+    <input type="file" name="file" (change)="onFileInput($event)"/>
   </div>
 
 </section>
