progress bar animation

--- a/src/app/load/load.component.html
+++ b/src/app/load/load.component.html
@@ -1,6 +1,6 @@
 <section class="grid">
   <h1>Uploading...</h1>
   <div class="loader">
-    <div></div>
+    <div class="bar"></div>
   </div>
 </section>
