working on success component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <section class="grid">
-  <app-home *ngIf="!fileSubmitted" (fileSubmitted)="onFileSubmit($event)"></app-home>
-  <app-load *ngIf="fileSubmitted"></app-load>
+<!--  <app-home *ngIf="!fileSubmitted" (fileSubmitted)="onFileSubmit($event)"></app-home>-->
+<!--  <app-load *ngIf="fileSubmitted"></app-load>-->
+  <app-successful></app-successful>
 </section>
 
